feat(client): Removed the mocked notifications data and implemented the logic both in frontend and the backend.
